--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ agp = "8.12.1"
 # Kotlin version
 kotlin = "2.2.10"
 secretsGradlePlugin = "2.0.1"
+gson = "2.11.0"
 
 # Core AndroidX libraries
 core-ktx = "1.17.0"
@@ -14,6 +15,7 @@ exifinterface = "1.4.1"
 
 # Google Maps SDK
 play-services-maps = "19.2.0"
+play-services-location = "21.0.1"
 
 # Image loading library
 coil = "2.7.0"
@@ -33,6 +35,8 @@ androidx-exifinterface = { group = "androidx.exifinterface", name = "exifinterfa
 
 # Google Maps SDK
 google-play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "play-services-maps" }
+google-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "play-services-location" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 
 # Image loading library
 coil-kt = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
@@ -41,7 +45,6 @@ coil-kt = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-junit" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-espresso-core" }
-
 
 [plugins]
 # Android application plugin
